<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity2">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:id="@+id/btn1"
        android:text="@string/send_sms" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:id="@+id/btn2"
        android:text="@string/do_a_call" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:id="@+id/btn3"
        android:text="@string/visit_google" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:text="@string/go_back" />

</LinearLayout>